<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_update"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.zxg.tongxunlu.UpdateActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dip">
            <ImageView
                    android:layout_width="65dip"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/stat_sys_phone_call"
                    android:id="@+id/imageView"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:id="@+id/name"
                    android:gravity="center"
                    android:hint="@string/name"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dip">
            <TextView
                    android:text="@string/number"
                    android:layout_width="65dip"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:id="@+id/tvNumber"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/telNumber"
                    android:gravity="center"
                    android:phoneNumber="true"
                    android:hint="@string/telNumber"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="65dip">
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="cancel1"
                    android:text="@string/cancel"/>

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="update"
                    android:text="@string/ok"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
