<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.zxg.tongxunlu.MainActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_alignParentStart="true"
            android:layout_height="40dip"
            android:id="@+id/linearLayout">
        <TextView
                android:text="@string/textView"
                android:gravity="center"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:id="@+id/textView"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="41dip"
                android:onClick="add"
                android:src="@android:drawable/ic_input_add"
                android:id="@+id/imageButton"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">
        <EditText android:layout_width="match_parent"
                  android:layout_height="40dip"
                  android:id="@+id/search"
                  android:singleLine="true"
                  android:layout_gravity="center"
                  android:hint="@string/search">
        </EditText>
        <ListView android:layout_width="match_parent"
                  android:layout_height="0dip"
                  android:id="@android:id/list"
                  android:layout_weight="1">
        </ListView>
        <TextView android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:id="@android:id/empty"
                  android:layout_weight="1"
                  android:gravity="center_horizontal"
                  android:textSize="35dp"
                  android:text="@string/relation"/>
    </LinearLayout>


</RelativeLayout>
